[package]
name = "htmx_webtransport"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures-util = { version = "0.3", default-features = false }
salvo = {version="0", features = ["quinn", "anyhow", "serve-static"] }
tokio = {version="1", features = ["macros"] }
tracing = "0"
tracing-subscriber = "0"
serde = "1"
serde_json = "1"
bytes = "1"